# upsc_bot

./: .env  .gitignore  IDs.txt  README.md  backup.json  creds.json  functions.py  index.html  main.py  main2.py  pyproject.toml  requirements.txt  test.py  values.py
Sandbox/: creds.json
