[tool.poetry]
name = "repl_python3_newspaperbot"
version = "0.1.0"
description = ""
authors = ["imsoumya18 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
discord = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
